1) Footer credit remain on minimal mode, 2) Repair moment time, now show prayertime on mobile, 3) Hide footer credit alignment, 4) Hide tazkirah

--- a/src/components/Modal/modal.module.css
+++ b/src/components/Modal/modal.module.css
@@ -129,7 +129,7 @@
 	padding: 100px 20px 140px;
 	margin: 40px 20px; */
 	margin: 60px 20px;
-	max-height: calc(80vh - 10em);
+	max-height: calc(100vh - 10em);
 	overflow-y: auto;
 }
 /* .modal .content .close {
